Minor improvements. Considered access controls